--- a/math/post_approx_with_GP_emulators.tex
+++ b/math/post_approx_with_GP_emulators.tex
@@ -65,7 +65,7 @@
 \subsection{Bayesian Inverse Problems}
 We consider a \textit{forward model} $\fwd: \R^{\dimPar} \to \R^{\dimObs}$ describing some system of interest, parameterized by 
 input parameters $\Par \in \parSpace \subset \R^{\dimPar}$. In addition, we suppose that we have noisy observations 
-$\obs \in \obsSpace \subset \R^{\dimObs}$ of the output signal which $\fwd(\Par)$ seeks to approximate. The 
+$\obs \in \obsSpace \subset \R^{\dimObs}$ of the output signal that $\fwd(\Par)$ seeks to approximate. The 
 \textit{inverse problem} concerns learning the parameter values $\Par$ such that $\fwd(\Par) \approx \obs$; i.e., \textit{calibrating}
 the model so that it agrees with reality. The statistical approach to this problem assumes that the link between model outputs and 
 observations is governed by a probability distribution on  $\obs | \Par$. We assume that this distribution admits a density 
