--- a/math/latex_macros_calibrating_LSMs.tex
+++ b/math/latex_macros_calibrating_LSMs.tex
@@ -52,6 +52,7 @@
 % Optimization-based. 
 \newcommand{\loss}{L}
 \newcommand{\parEst}{\hat{\Par}}
+\newcommand{\regularizer}{R}
 
 % MLE. 
 \newcommand{\llik}{\mathcal{L}} % Log-likelihood 
@@ -59,6 +60,8 @@
 
 % Bayesian. 
 \newcommand{\priorDens}{\pi_0} % Prior density 
+\newcommand{\priorCov}{C_0}
+\newcommand{\priorMean}{m_0}
 \newcommand{\postDens}{\pi} % Unnormalized posterior density.
 \newcommand{\postDensNorm}{\overline{\pi}} % Normalized posterior density.
 \newcommand{\normCst}{Z} % Normalizing constant for posterior density. 
